@@ -1,3 +1,11 @@
+2004-06-22  Leena Gunda  <leena.gunda@wipro.com>
+
+	* sound-properties-capplet.c: 
+	(create_dialog): set sensitivity of audible/visual bell 
+	options only if XKB enabled.
+	(CheckXKB): function to check if XKB support available.
+	Fixes bug #144090
+
 2004-04-15  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.1
